@@ -7,6 +7,7 @@ procps-ng-NEXT
   * pgrep: Match on process ID                             Debian #612146
   * pgrep: Add process_mrelease                            merge !250
   * pgrep: Add shell quoting                               merge !248
+  * pgrep: Use pidfd_send_signal()                         issue #207
   * pgrep.1: Note that we can only go to 100th of second   issue #376
   * pmap: add -k option to print raw names from kernel     merge !251
   * ps: parse --help correctly                             issue #381
